<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">v2rayNG</string>
    <string name="app_widget_name">Switch</string>

    <!-- Notifications -->
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="notification_action_more">click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>

    <!--ServerActivity-->
    <string name="title_server">Server</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_qrcode">Import config from QRcode</string>
    <string name="menu_item_import_config_clipboard">Import config from Clipboard</string>
    <string name="menu_item_import_config_manually">Type manually</string>
    <string name="del_config_comfirm">Confirm delete？</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_network">network</string>
    <string name="server_lab_more_function">more function</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_request_host">request host</string>
    <string name="server_lab_stream_security">tls</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>
    <string name="toast_none_data">There is nothing</string>
    <string name="toast_incorrect_protocol">Incorrect protocol</string>
    <string name="toast_decoding_failed">Decoding failed</string>


    <string name="switch_bypass_apps_on">Don\'t proxy selected apps</string>
    <string name="switch_bypass_apps_off">Proxy selected apps</string>

    <!-- PerAppProxyActivity -->
    <string name="msg_dialog_progress">Loading</string>
    <string name="menu_item_select_all">Select all</string>


    <!-- Preferences -->
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>

    <string name="title_pref_bypass_mainland">Bypass mainland</string>
    <string name="summary_pref_bypass_mainland">Bypass mainland</string>

    <string name="title_pref_per_app_proxy">Per-app proxy</string>
    <string name="summary_pref_per_app_proxy">Per-app proxy mode only support Android 5.0 Lollipop or higher</string>

    <string name="title_pref_feedback">Feedback</string>
    <string name="summary_pref_feedback">Feedback enhancements or bugs to GitHub</string>

    <string name="title_pref_version">Version</string>

    <string-array name="share_method">
        <item>QRcode</item>
        <item>Export to clipboard</item>
    </string-array>
</resources>
